# LambdaInfra

./: .gitignore  CMakeLists.txt  README.md  init.sh  install_dependencies.sh  setup_env_var.sh
opt/: CMakeLists.txt
src/: CMakeLists.txt
src/lambda/: handler.py  helloworld.c  setuplambda.sh  sign_invoke.py  test_invoke.py  updatelambda.sh
src/lambda/.deps/: helloworld.Po
src/signinvoke/: awsv4.cpp  awsv4.hpp  count_concurrent.cpp  main.cpp  working.cpp
src/tmp/: CMakeLists.txt  HelloWorld.cpp
